# openapi-schema-pydantic

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: release.yml
.github/workflows/: publish-to-test-pypi.yml  publish.yml  test.yml
.tox/py3.10/: .tox-info.json
openapi_pydantic/: __init__.py
openapi_pydantic/v3/: __init__.py
openapi_pydantic/v3/v3_0_3/: contact.py  external_documentation.py  license.py  media_type.py  oauth_flow.py  operation.py  parameter.py  path_item.py  schema.py  security_scheme.py  server.py  server_variable.py  util.py  xml.py
openapi_pydantic/v3/v3_1_0/: README.md  __init__.py  components.py  contact.py  external_documentation.py  info.py  link.py  media_type.py  oauth_flow.py  parameter.py  response.py  schema.py  security_scheme.py  server.py  tag.py
openapi_schema_pydantic/: __init__.py  util.py
openapi_schema_pydantic/v3/: __init__.py
openapi_schema_pydantic/v3/v3_0_3/: README.md  __init__.py  callback.py  components.py  contact.py  datatype.py  discriminator.py  encoding.py  example.py  external_documentation.py  header.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  oauth_flows.py  open_api.py  operation.py  parameter.py  path_item.py  paths.py  reference.py  request_body.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  tag.py  util.py  xml.py
openapi_schema_pydantic/v3/v3_1_0/: README.md  __init__.py  _config.py  callback.py  components.py  contact.py  discriminator.py  encoding.py  example.py  external_documentation.py  header.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  oauth_flows.py  open_api.py  operation.py  parameter.py  path_item.py  reference.py  request_body.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  tag.py  xml.py
tests/: test_alias.py  test_config_example.py  test_example.py  test_global_config.py  test_schema.py  test_schema_class.py  test_swagger_openapi_v3.py  test_util.py
tests/schema_classes/: test_schema.py  test_security_scheme.py
tests/util/: test_optional_and_computed.py  test_pydantic_field.py  test_util.py
tests/v3_0_3/: test_config_example.py  test_datatype.py  test_optional_and_computed.py  test_util.py
tests/v3_1_0/: __init__.py  test_datatype.py
